Fix image stretching on mobile and other screens

--- a/assets/styles/_gdc.scss
+++ b/assets/styles/_gdc.scss
@@ -1,16 +1,58 @@
-.gdc-DISABLE {
-	&.mitek-flow.front {
+* {
+	&.mitek-flow {
+		background: transparent;
+		width: 100%;
+		height: auto;
+		text-align: center;
 		img {
+			width: 95%;
 			max-height: none;
-			max-width: 100vw;
-			min-width: 1440px;
 			height: auto;
-			width: 100vw;
-			margin-left: 50%;
-			transform: translateX(-50%);
 		}
 	}
 }
+
 .page-step-1 {
 	background: #ddd;
+}
+
+#time_at_address {
+	animation: 2600ms fadeOut;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+	0% {
+		opacity: 1
+	}
+	90% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+#time_at_address_checked {
+	animation: 2600ms fadeIn;
+	animation-fill-mode: forwards;
+	margin-left: -16px
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+		transform: scale(2.5);
+	}
+	89% {
+		opacity: 0;
+	}
+	90% {
+		opacity: 0.8;
+		transform: scale(3);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
