--- a/assets/styles/_scenarios.scss
+++ b/assets/styles/_scenarios.scss
@@ -213,32 +213,6 @@ h3 {
 	/* translations-transform: uppercase; */
 }
 
-#time_at_address_checked {
-	animation: 2600ms fadeIn;
-
-	animation-fill-mode: forwards;
-	opacity: 0;
-	margin-left: -16px
-
-}
-
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-		transform: scale(2.5);
-	}
-	89% {
-		opacity: 0;
-	}
-	90% {
-		opacity: 0.8;
-		transform: scale(3);
-	}
-	100% {
-		opacity: 1;
-		transform: scale(1);
-	}
-}
 
 @keyframes appear {
 	from {
