--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -242,24 +242,6 @@ h3 {
   animation-fill-mode: forwards;
   /* translations-transform: uppercase; */ }
 
-#time_at_address_checked {
-  animation: 2600ms fadeIn;
-  animation-fill-mode: forwards;
-  opacity: 0;
-  margin-left: -16px; }
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: scale(2.5); }
-  89% {
-    opacity: 0; }
-  90% {
-    opacity: 0.8;
-    transform: scale(3); }
-  100% {
-    opacity: 1;
-    transform: scale(1); } }
 @keyframes appear {
   from {
     color: transparent; }
@@ -1225,16 +1207,46 @@ div.reviewPic:nth-child(4) {
   margin-bottom: 15px;
   border-bottom: 1px solid #ccc; }
 
-.gdc-DISABLE.mitek-flow.front img {
-  max-height: none;
-  max-width: 100vw;
-  min-width: 1440px;
+*.mitek-flow {
+  background: transparent;
+  width: 100%;
   height: auto;
-  width: 100vw;
-  margin-left: 50%;
-  transform: translateX(-50%); }
+  text-align: center; }
+  *.mitek-flow img {
+    width: 95%;
+    max-height: none;
+    height: auto; }
 
 .page-step-1 {
   background: #ddd; }
+
+#time_at_address {
+  animation: 2600ms fadeOut;
+  animation-fill-mode: forwards; }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  90% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+#time_at_address_checked {
+  animation: 2600ms fadeIn;
+  animation-fill-mode: forwards;
+  margin-left: -16px; }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(2.5); }
+  89% {
+    opacity: 0; }
+  90% {
+    opacity: 0.8;
+    transform: scale(3); }
+  100% {
+    opacity: 1;
+    transform: scale(1); } }
 
 /*# sourceMappingURL=style.css.map */
